# citation-generator

./: CMakeLists.txt  README.md
hdr/: html_scrape.h
src/: main.cpp
